--- a/src/food-search/food-search.component.html
+++ b/src/food-search/food-search.component.html
@@ -1,11 +1,25 @@
 <div class="food-search">
-	<em>Food search!</em>
+	<h1>Food search</h1>
 	<form class="example-form">
 		<mat-form-field class="example-full-width">
-			<input matInput [(ngModel)]="searchTerm" 
+			<input matInput [(ngModel)]="searchTerm"
       name="searchTerm"
       placeholder="Food name for search">
     </mat-form-field>
-    <button (click)="doSearch()" mat-raised-button color="primary">Search</button>
+			<button (click)="doSearch()" mat-raised-button color="primary">Search</button>
 	</form>
+	<em>Total hits: {{results.totalHits}}, page {{results.foodSearchCriteria.pageNumber}} </em>
+
+	<table mat-table [dataSource]="results.foods" class="mat-elevation-z8">
+		<ng-container matColumnDef="description">
+			<th mat-header-cell *matHeaderCellDef> Description </th>
+			<td mat-cell *matCellDef="let food"> {{food.description}} </td>
+		</ng-container>
+		<ng-container matColumnDef="brandOwner">
+			<th mat-header-cell *matHeaderCellDef> Brand </th>
+			<td mat-cell *matCellDef="let food"> {{food.brandOwner}} </td>
+		</ng-container>
+		<tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+		<tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
+	</table>
 </div>
