--- a/src/food-search/food-search.component.html
+++ b/src/food-search/food-search.component.html
@@ -8,9 +8,10 @@
     </mat-form-field>
 			<button (click)="doSearch()" mat-raised-button color="primary">Search</button>
 	</form>
+  <div *ngIf="results">
 	<em>Total hits: {{results.totalHits}}, page {{results.foodSearchCriteria.pageNumber}} </em>
 
-	<table mat-table [dataSource]="results.foods" class="mat-elevation-z8">
+	<table *ngIf="results.foods" mat-table [dataSource]="results.foods" class="mat-elevation-z8">
 		<ng-container matColumnDef="description">
 			<th mat-header-cell *matHeaderCellDef> Description </th>
 			<td mat-cell *matCellDef="let food"> {{food.description}} </td>
@@ -19,7 +20,12 @@
 			<th mat-header-cell *matHeaderCellDef> Brand </th>
 			<td mat-cell *matCellDef="let food"> {{food.brandOwner}} </td>
 		</ng-container>
+		<ng-container matColumnDef="ingredients">
+			<th mat-header-cell *matHeaderCellDef>Ingredients</th>
+			<td mat-cell *matCellDef="let food"> {{food.ingredients}} </td>
+		</ng-container>
 		<tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
 		<tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
 	</table>
+  </div>
 </div>
