--- a/src/food-search/food-search.component.html
+++ b/src/food-search/food-search.component.html
@@ -1,6 +1,8 @@
-<div class="food-search">
-	<h1>Food search</h1>
-  <em>From the US Dept. of Agriculture FoodData Central</em>
+<div>
+  <nav>
+  <a routerLink="/" routerLinkActive="active">Home</a>
+  </nav>
+ 	<h1>Food search</h1>
 	<form class="example-form">
 		<mat-form-field class="example-full-width">
 			<input matInput [(ngModel)]="searchTerm"
