--- a/src/home/home.component.html
+++ b/src/home/home.component.html
@@ -1,7 +1,11 @@
-<h1>Welcome to the home page!</h1>
+<nav>
+	<a routerLink="/food-search" routerLinkActive="active">Search</a>
+</nav>
+<h1>Welcome to the Food page!</h1>
+<em>From the US Dept. of Agriculture FoodData Central</em>
 
 <p>This page exists mostly to demonstrate routing.
 </p>
 <nav>
-  <a routerLink="/food-search" routerLinkActive="active">Search for a food or brand</a>
+	<a routerLink="/food-search" routerLinkActive="active">Search for a food or brand</a>
 </nav>
